# Cluster-bot

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  config.txt  run.sh
bots/: README.md  v1.out
include/: Action.hpp  Cube.hpp  Game.hpp  Gamestate.hpp  Minimax.hpp  OffsetCoordinates.hpp  Player.hpp  bot.hpp  commands.hpp
srcs/: Action.cpp  Cube.cpp  Game.cpp  Gamestate.cpp  Minimax.cpp  OffsetCoordinates.cpp  commands.cpp  main.cpp
